--- a/src/main/resources/templates/layout.html.hbs
+++ b/src/main/resources/templates/layout.html.hbs
@@ -7,8 +7,8 @@
 <body>
 	<nav>
 	    <ol>
+            <li><a href="/guardarropas">Guardarropas</a></li>
             <li><a href="/">Home</a></li>
-            <li><a href="/guardarropas">Guardarropas</li>
         </ol>
 	</nav>
 	<main>
