--- a/src/main/resources/templates/modeloPrendas.html.hbs
+++ b/src/main/resources/templates/modeloPrendas.html.hbs
@@ -2,7 +2,7 @@
     <h1>{{nombre}}</h1>
     <h2>{{color}}</h2>
 
-    <a href="/guardarropas/{{../id}}/prendas/{{id}}/borrar">Borrar prenda</a>
+    <a href="/guardarropas/{{../idGuardarropa}}/prendas/{{id}}/borrar">Borrar prenda</a>
 {{/partial}}
 
 {{> layout.html.hbs }}
